Commit version 1.0 stable.

--- a/webproject/src/main/webapp/simpleFormInsert.html
+++ b/webproject/src/main/webapp/simpleFormInsert.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 header {
-    background-color:black;
+    background-color:rgb(0, 0, 255);
     color:white;
     text-align:center;
     padding:5px;	 
@@ -21,7 +21,7 @@ section {
     padding:10px;	 	 
 }
 footer {
-    background-color:black;
+    background-color:rgb(0, 0, 255);
     color:white;
     clear:both;
     text-align:center;
@@ -44,9 +44,10 @@ footer {
 	
 	<form action="SimpleFormInsert" method="POST">
 	
-		User Name: <input type="text" name="userName"> <br />
-		Email: <input type="text" name="email"> <br />
-		Phone: <input type="text" name="phone"> <br />
+		Unit Name: <input type="text" name="uName"> <br />
+		Unit Size: <input type="text" name="uSize"> <br />
+		Unit Points: <input type="text" name="uPoint"> <br />
+		Unit Additional Info: <input type="text" name="uAddl"> <br />
 		
 		<input type="submit" value="Submit" />
 	</form>
