--- a/webproject/src/main/webapp/simpleFormSearch.html
+++ b/webproject/src/main/webapp/simpleFormSearch.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 header {
-    background-color:black;
+    background-color:rgb(0, 0, 255);
     color:white;
     text-align:center;
     padding:5px;	 
@@ -21,7 +21,7 @@ section {
     padding:10px;	 	 
 }
 footer {
-    background-color:black;
+    background-color:rgb(0, 0, 255);
     color:white;
     clear:both;
     text-align:center;
@@ -44,11 +44,16 @@ footer {
 	
 	<form action="SimpleFormSearch" method="POST">
 	
-		User Name: <input type="text" name="keyword"> <br />
+		Unit Name: <input type="text" name="keyword1"> <br />
+		Unit Size: <input type="text" name="keyword2"> <br />
 		
 		<input type="submit" value="Search" />
 	</form>
 
+
+	<form action="ClearTable" method="POST">
+		<input type="submit" value="Clear Table">
+	</form>
 </section>
 
 <footer>
